# solana-sdk-zkvm

address/: Cargo.toml
address-lookup-table-interface/: Cargo.toml
address/src/: lib.rs  syscalls.rs
big-mod-exp/: Cargo.toml
big-mod-exp/src/: lib.rs
blake3-hasher/: Cargo.toml
blake3-hasher/src/: lib.rs
bls-signatures/: Cargo.toml
bls-signatures/src/: lib.rs  macros.rs  proof_of_possession.rs  pubkey.rs  signature.rs
bn254/: Cargo.toml
bn254/src/: addition.rs  compression.rs  lib.rs  multiplication.rs  pairing.rs
cpi/: Cargo.toml
cpi/src/: lib.rs  syscalls.rs
define-syscall/src/: definitions.rs  lib.rs
epoch-stake/: Cargo.toml
epoch-stake/src/: lib.rs
frozen-abi/: Cargo.toml
frozen-abi/src/: abi_example.rs
instruction/: Cargo.toml
instruction/src/: lib.rs  syscalls.rs
instructions-sysvar/: Cargo.toml
instructions-sysvar/src/: lib.rs
keccak-hasher/: Cargo.toml
keccak-hasher/src/: lib.rs
message/src/: compiled_keys.rs  legacy.rs  lib.rs
msg/: Cargo.toml
msg/src/: lib.rs
program/: Cargo.toml
program-entrypoint/: Cargo.toml
program-entrypoint/src/: lib.rs
program-memory/: Cargo.toml
program-memory/src/: lib.rs
program/src/: compute_units.rs  hash.rs  instruction.rs  lib.rs  log.rs  program.rs  sysvar.rs
pubkey/src/: lib.rs
sdk/src/: lib.rs  pubkey.rs
secp256k1-recover/: Cargo.toml
secp256k1-recover/src/: lib.rs
secp256r1-program/: Cargo.toml
secp256r1-program/src/: lib.rs
sha256-hasher/: Cargo.toml
sha256-hasher/src/: lib.rs
sysvar/: Cargo.toml
sysvar/src/: lib.rs  (+1 more)
vote-interface/: Cargo.toml
(+5 files in other folders)
